Fix production readiness issues in gateway app
- Add proper logger initialization
- Replace deprecated regex parameter with pattern in Query
- Add Docker client None checks to prevent container call errors
- Fix CORS middleware indentation formatting
- Optimize Redis key existence checks using TTL directly
- Rename app-new.py to app_new.py for Python module compatibility
- Update Dockerfile to use app_new.py
- Rebuild Docker image with correct configuration

--- a/core/core.yml
+++ b/core/core.yml
@@ -97,7 +97,7 @@ services:
   # ---- Hub Gateway ----
   hub-gateway:
     build: ./gateway
-    container_name: abs-hub-gateway
+    container_name: abs-core-hub-gateway
     environment:
       REDIS_URL: redis://redis:6379/0
       OLLAMA_BASE_URL: http://ollama:11434
