--- a/core/gateway/Dockerfile
+++ b/core/gateway/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY app.py registry.json catalog.json ./
+COPY app_new.py registry.json catalog.json ./
 ENV PYTHONUNBUFFERED=1
 EXPOSE 8081
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8081"]
+CMD ["uvicorn", "app_new:app", "--host", "0.0.0.0", "--port", "8081"]
