Implement Global Chat feature and database schema management
Features:
- Add global chat mode that searches across all analyzed documents
- Toggle between 'Current Doc' and 'All Docs' chat modes in UI
- New /api/chat/global endpoint for multi-document queries
- Enhanced chat UI with document metadata display
- Shows which documents were searched and their status

Database Schema Management:
- Add database_schema field to apps-registry.json for all apps
- Create comprehensive Database Schema Design Guidelines
- Remove duplicate tables from public schema
- Clean up legacy test data (2 unused documents)
- Establish per-app schema policy (each app gets own schema)
- Document schema naming conventions and best practices

Database Cleanup:
- Drop public schema with CASCADE to remove duplicate tables
- Recreate clean public schema for future use
- Preserve all active data in document_hub schema
- Remove legacy test data (2 documents, 1 user, 2 audit logs)

Tech Stack:
- Global chat uses RAG across multiple documents
- Supports up to 5 documents by default (configurable)
- Returns document metadata with search results
- Enhanced AI prompts for cross-document analysis
- Context management with token limits

Files Changed:
- app_integrated.py: Add global chat endpoint and models
- index.html: Add chat mode toggle and metadata display
- apps-registry.json: Add database_schema to all apps
- Database_Schema_Design_Guidelines.md (new)

This commit enables:
1. Multi-document chat functionality for comprehensive analysis
2. Proper database schema isolation per application
3. Clean database with no duplicate tables
4. Comprehensive guidelines for future app development

--- a/abs-ai-hub/apps-registry.json
+++ b/abs-ai-hub/apps-registry.json
@@ -14,7 +14,8 @@
       },
       "port": 8050,
       "icon": "contract-reviewer.png",
-      "path": "apps/legal-assistant"
+      "path": "apps/legal-assistant",
+      "database_schema": "legal_assistant"
     },
     {
       "name": "Contract Reviewer",
@@ -42,7 +43,8 @@
       },
       "port": 8080,
       "icon": "pdf-voice.png",
-      "path": "apps/rag-pdf-voice"
+      "path": "apps/rag-pdf-voice",
+      "database_schema": "rag_pdf_voice"
     },
     {
       "name": "Whisper Server",
@@ -56,7 +58,8 @@
       },
       "port": 8001,
       "icon": "whisper.png",
-      "path": "apps/whisper-server"
+      "path": "apps/whisper-server",
+      "database_schema": "whisper_server"
     },
     {
       "name": "Contract Reviewer v2",
@@ -70,7 +73,8 @@
       },
       "port": 8082,
       "icon": "contract-reviewer.png",
-      "path": "apps/contract-reviewer-v2"
+      "path": "apps/contract-reviewer-v2",
+      "database_schema": "document_hub"
     }
   ]
 }
