--- a/abs-ai-hub/apps/contract-reviewer-v2/requirements_integrated.txt
+++ b/abs-ai-hub/apps/contract-reviewer-v2/requirements_integrated.txt
@@ -49,3 +49,6 @@ pytest-mock==3.12.0
 # Additional utilities
 python-multipart==0.0.6
 jinja2==3.1.2
+
+# File system monitoring for watch directories
+watchdog==3.0.0
