Add support for IP addresses and domain names for all app and API links
- Created base-url-config.js utility for dynamic host detection
- Updated framework-config.js to use current host instead of hardcoded localhost
- Updated backend serve_frontend() to detect host from request and inject dynamic URLs
- Fixed inspector URL in index.html to use dynamic host detection
- Added documentation to docker-compose.yml about IP/domain support
- All external service URLs (Hub UI, Gateway) now automatically adapt to current host
- API calls already use relative URLs, so they work automatically with any host
- Maintains backward compatibility with localhost for local development

--- a/abs-ai-hub/apps/contract-reviewer-v2/docker-compose.yml
+++ b/abs-ai-hub/apps/contract-reviewer-v2/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - HUB_GATEWAY_URL=http://hub-gateway:8081
       
       # Framework Configuration
+      # Note: URLs with 'localhost' are automatically replaced with the actual host/IP from requests
+      # For explicit IP/domain configuration, set these to your hostname/IP address:
+      # Example: ABS_FRAMEWORK_PATH=http://192.168.1.100:3000/unified-framework.js
       - ABS_FRAMEWORK_PATH=http://localhost:3000/unified-framework.js
       - ABS_GATEWAY_URL=http://localhost:8081
       - ABS_APP_REGISTRY_URL=http://localhost:3000/apps-registry.json
