--- a/abs-ai-hub/hub-ui/nginx.conf
+++ b/abs-ai-hub/hub-ui/nginx.conf
@@ -19,13 +19,18 @@ server {
     }
 
     # Proxy for Hub Gateway API
+    # Try abs-core-hub-gateway first (official name), fallback to hub-gateway
     location /api/ {
-        proxy_pass http://hub-gateway:8081/;
+        # Use the actual container name
+        proxy_pass http://abs-core-hub-gateway:8081/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
+        # Allow nginx to start even if gateway is temporarily down
+        proxy_connect_timeout 10s;
+        proxy_read_timeout 30s;
         error_page 502 = /errors/502.html;
     }
 
