feat: Asset Schema v1.0 migration and Hub UI v2 theming
- Migrated all 20 assets to Standard Asset Schema v1.0
- Added version, runtime structure, ownership, resources to assets
- Renamed allowed_models to required_models for apps
- Added auto_sleep_min governance to key apps
- Updated asset_schema.py with v1.0 compliance validators
- Added SUSPENDED state to LifecycleState enum
- Implemented lifecycle.state and _status metadata protection
- Added policy semantics enforcement (required_models/served_models)
- Created asset authoring guide and schema documentation
- Hub UI: Added light/dark theme support with CSS variables
- Hub UI: Fixed asset status derivation from lifecycle.desired
- Hub UI: Theme-aware styling for all views

--- a/assets/core/llm-runtime/ollama/asset.yaml
+++ b/assets/core/llm-runtime/ollama/asset.yaml
@@ -1,15 +1,39 @@
 asset_id: ollama
 display_name: Ollama
+version: "1.0.0"
+
 interface: llm-runtime
 interface_version: v1
 class: service
+
 description: Local LLM inference server supporting multiple models
-container:
-  name: abs-ollama
+
+runtime:
+  type: container
+  container:
+    name: abs-ollama
+
 endpoints:
+  protocol: rest
+  api_base: http://ollama:11434
   health: http://ollama:11434/api/tags
-metadata:
-  container: abs-ollama
-  health: http://ollama:11434/api/tags
+
 lifecycle:
   desired: running
+
+resources:
+  gpu_required: true
+  min_vram_gb: 8
+  min_ram_gb: 16
+  cold_start_sec: 30
+
+policy:
+  served_models:
+    - llama3.2:3b
+    - llama3:8b
+    - llama4:scout
+
+ownership:
+  provider: system
+  visibility: shared
+  requestable: false
