--- a/assets/apps/contract-reviewer/asset.yaml
+++ b/assets/apps/contract-reviewer/asset.yaml
@@ -1,27 +1,38 @@
 asset_id: contract-reviewer
 display_name: Contract Reviewer
+version: "1.0.0"
+
 interface: application
 interface_version: v1
 class: app
-description: Analyze contracts, extract key clauses, flag risks, and produce citation-backed
-  reports
+
+description: Analyze contracts, extract key clauses, flag risks, and produce citation-backed reports
+
 policy:
-  allowed_models:
-  - llama3.2:3b
-  - llama3.2:latest
-  - llama3:8b
-  - llama4:scout
+  required_models:
+    - llama3.2:3b
+    - llama3.2:latest
+    - llama3:8b
+    - llama4:scout
   allowed_embeddings:
-  - legal-bert
-  - nomic-embed-text
-  - mxbai-embed-large
-  - bge-small-en-v1.5
+    - legal-bert
+    - nomic-embed-text
+    - mxbai-embed-large
+    - bge-small-en-v1.5
   defaults:
     embed_model: legal-bert
     chat_model: llama3.2:3b
     provider: huggingface
     dim: 768
-metadata:
-  url: http://localhost:7860
+
 lifecycle:
   desired: on-demand
+  auto_sleep_min: 15
+
+ownership:
+  provider: admin
+  visibility: shared
+  requestable: true
+
+metadata:
+  url: http://localhost:7860
