--- a/assets/apps/onyx-assistant/asset.yaml
+++ b/assets/apps/onyx-assistant/asset.yaml
@@ -1,19 +1,30 @@
 asset_id: onyx-assistant
 display_name: Onyx AI Assistant
+version: "1.0.0"
+
 interface: application
 interface_version: v1
 class: app
+
 description: AI assistant with chat interface, RAG capabilities, and agent management
+
 policy:
-  allowed_models:
-  - llama3.2:3b
-  - llama3.2:latest
-  - llama3:8b
-  - llama4:scout
+  required_models:
+    - llama3.2:3b
+    - llama3.2:latest
+    - llama3:8b
+    - llama4:scout
   allowed_embeddings:
-  - bge-small-en-v1.5
-  - all-minilm
-metadata:
-  url: http://localhost:8000
+    - bge-small-en-v1.5
+    - all-minilm
+
 lifecycle:
   desired: on-demand
+
+ownership:
+  provider: admin
+  visibility: shared
+  requestable: true
+
+metadata:
+  url: http://localhost:8000
