--- a/assets/apps/onyx-suite/asset.yaml
+++ b/assets/apps/onyx-suite/asset.yaml
@@ -1,18 +1,29 @@
 asset_id: onyx-suite
 display_name: Onyx Suite
+version: "1.0.0"
+
 interface: application
 interface_version: v1
 class: app
+
 description: Full-feature Onyx deployment (local)
+
 policy:
-  allowed_models:
-  - llama3.2:3b
-  - llama3.2:latest
-  - llama3:8b
+  required_models:
+    - llama3.2:3b
+    - llama3.2:latest
+    - llama3:8b
   allowed_embeddings:
-  - bge-small-en-v1.5
-  - all-minilm
-metadata:
-  url: http://localhost:3001
+    - bge-small-en-v1.5
+    - all-minilm
+
 lifecycle:
   desired: on-demand
+
+ownership:
+  provider: admin
+  visibility: shared
+  requestable: true
+
+metadata:
+  url: http://localhost:3001
