--- a/assets/apps/open-webui/asset.yaml
+++ b/assets/apps/open-webui/asset.yaml
@@ -1,16 +1,27 @@
 asset_id: open-webui
 display_name: Open WebUI
+version: "1.0.0"
+
 interface: application
 interface_version: v1
 class: app
+
 description: Open-source web interface for LLM chat and model management
+
 policy:
-  allowed_models:
-  - llama3.2:3b
-  - llama3.2:latest
+  required_models:
+    - llama3.2:3b
+    - llama3.2:latest
   allowed_embeddings:
-  - bge-small-en-v1.5
-metadata:
-  url: http://localhost:3200
+    - bge-small-en-v1.5
+
 lifecycle:
   desired: on-demand
+
+ownership:
+  provider: system
+  visibility: shared
+  requestable: true
+
+metadata:
+  url: http://localhost:3200
