--- a/assets/apps/rag-pdf-voice/asset.yaml
+++ b/assets/apps/rag-pdf-voice/asset.yaml
@@ -1,17 +1,28 @@
 asset_id: rag-pdf-voice
 display_name: RAG PDF Voice
+version: "1.0.0"
+
 interface: application
 interface_version: v1
 class: app
+
 description: Document analysis with voice interaction capabilities
+
 policy:
-  allowed_models:
-  - llama3.2:3b
-  - llama3.2:latest
+  required_models:
+    - llama3.2:3b
+    - llama3.2:latest
   allowed_embeddings:
-  - bge-small-en-v1.5
-  - all-minilm
-metadata:
-  url: http://localhost:8080
+    - bge-small-en-v1.5
+    - all-minilm
+
 lifecycle:
   desired: on-demand
+
+ownership:
+  provider: admin
+  visibility: shared
+  requestable: true
+
+metadata:
+  url: http://localhost:8080
