--- a/assets/core/speech/whisper-server/asset.yaml
+++ b/assets/core/speech/whisper-server/asset.yaml
@@ -1,19 +1,37 @@
 asset_id: whisper-server
 display_name: Whisper Server
+version: "1.0.0"
+
 interface: speech
 interface_version: v1
 class: service
+
 description: Standalone speech-to-text transcription service using OpenAI Whisper
-container:
-  name: abs-whisper-server
+
+runtime:
+  type: container
+  container:
+    name: abs-whisper-server
+
 endpoints:
+  protocol: rest
+  api_base: http://localhost:8001
   health: http://localhost:8001/healthz
+
+lifecycle:
+  desired: running
+
+resources:
+  gpu_required: true
+  min_vram_gb: 4
+  cold_start_sec: 30
+
+ownership:
+  provider: system
+  visibility: shared
+  requestable: false
+
 metadata:
-  url: http://localhost:8001
-  health: http://localhost:8001/healthz
   endpoints:
     transcribe: /transcribe
     health: /healthz
-  container: abs-whisper-server
-lifecycle:
-  desired: running
