feat: separate LLM and embedding models with distinct interfaces
Backend implementation for model interface distinction:
- Change LLM models to use 'llm-runtime' interface (2 models)
- Change embedding models to use 'embedding-runtime' interface (4 models)
- Add embedding-runtime binding to core bindings.yaml
- Add helper methods get_llm_models() and get_embedding_models() in AssetManager
- Add new API endpoints: GET /v1/assets/models/llm and /v1/assets/models/embedding
- Add SERVED runtime type to Pydantic schema for embedding models
- Fix route ordering in FastAPI to prevent conflicts
- Fix assets summary endpoint bug (list iteration)
- Update assets.json registry with new interface types
- Add model management design doc

Benefits:
- Clean scheduling and policy separation
- Clear UI distinction between model types
- Future support for different backends (TEI, Instructor, OpenAI Embeddings)
- Improved observability with interface-specific metrics

Files modified: 11 (6 asset YAMLs, 3 backend services, 2 config files)

--- a/assets/models/llama3_8b/asset.yaml
+++ b/assets/models/llama3_8b/asset.yaml
@@ -2,7 +2,7 @@ asset_id: llama3:8b
 display_name: LLaMA 3 8B
 version: "1.0.0"
 
-interface: model
+interface: llm-runtime
 interface_version: v1
 class: model
 
