--- a/assets/models/llama4_scout/asset.yaml
+++ b/assets/models/llama4_scout/asset.yaml
@@ -2,7 +2,7 @@ asset_id: llama4:scout
 display_name: LLaMA 4 Scout
 version: "1.0.0"
 
-interface: model
+interface: llm-runtime
 interface_version: v1
 class: model
 
