feat(apps): add enhanced metadata fields to all app manifests
- Added category field for grouping (Legal Apps, AI Assistants, AI Platforms)
- Added tags for search and discovery
- Added explicit port numbers
- Added status field for lifecycle management
- All apps set to status=active

Updated apps:
- contract-reviewer-v2 (Legal Apps)
- deposition-summarizer (Legal Apps)
- legal-assistant (Legal Apps)
- onyx-assistant (AI Assistants)
- onyx-suite (AI Platforms)
- open-webui (AI Platforms)

--- a/assets/apps/contract-reviewer-v2/asset.yaml
+++ b/assets/apps/contract-reviewer-v2/asset.yaml
@@ -36,3 +36,11 @@ ownership:
 
 metadata:
   url: http://localhost:8082
+  port: 8082
+  category: Legal Apps
+  tags:
+    - contract-analysis
+    - legal-tech
+    - document-review
+    - ai-assistant
+  status: active
