--- a/assets/apps/open-webui/asset.yaml
+++ b/assets/apps/open-webui/asset.yaml
@@ -25,3 +25,11 @@ ownership:
 
 metadata:
   url: http://localhost:3200
+  port: 3200
+  category: AI Platforms
+  tags:
+    - chat
+    - model-management
+    - open-source
+    - web-interface
+  status: active
