--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -98,6 +98,7 @@ services:
   hub-gateway:
     build: ./gateway
     container_name: abs-core-hub-gateway
+    runtime: nvidia
     environment:
       REDIS_URL: redis://redis:6379/0
       OLLAMA_BASE_URL: http://ollama:11434
