feat(console): Add real model API integration, Guided Tour, and UI improvements
- Replace hard-coded model responses with real API calls to activated models
- Add model activation via Gateway API (/v1/admin/models/{model}/load)
- Integrate real chat completion API for dynamic responses based on prompts
- Move Orchestration menu item to right of Models
- Replace 'Normal/All-in-One Demo' toggle with 'Guided Tour' in navigation menu
- Add 'Activated' status indicator for Guided Tour
- Fix asset status display to show 'Running' when demo prompts are processing
- Improve model ID matching with normalization (handles colons/underscores)
- Update page navigation order: Overview â†’ Performance â†’ Workloads â†’ Models â†’ Orchestration â†’ Explore
- Update demo sequence page indices to match new navigation order

--- a/abs-ai-hub/apps-registry.json
+++ b/abs-ai-hub/apps-registry.json
@@ -62,7 +62,7 @@
       "database_schema": "whisper_server"
     },
     {
-      "name": "Contract Reviewer v2",
+      "name": "Contract Reviewer",
       "id": "contract-reviewer-v2",
       "category": "Legal Apps",
       "description": "Professional AI-powered contract analysis platform with modern three-panel interface.",
