refactor(console): rename Attract Mode to Showcase Mode and Live Interaction to Live Playground
Rename user-facing terminology: 'Attract Mode' to 'Showcase Mode' and 'Live Interaction' to 'Live Playground'. Updated UI labels, tooltips, comments, and documentation. CSS class names and event names remain unchanged for internal implementation.

--- a/assets/apps/abs-workstation-console/asset.yaml
+++ b/assets/apps/abs-workstation-console/asset.yaml
@@ -6,7 +6,7 @@ interface: ui
 interface_version: v1
 class: app
 
-description: Real-time system metrics, hardware overview, and AI workload status for this ABS workstation. System observability console with Attract Mode.
+description: Real-time system metrics, hardware overview, and AI workload status for this ABS workstation. System observability console with Showcase Mode.
 
 policy:
   required_models: []
