--- a/abs-ai-hub/apps/abs_workstation_console/package.json
+++ b/abs-ai-hub/apps/abs_workstation_console/package.json
@@ -17,6 +17,7 @@
         "@types/node": "^24.10.1",
         "@vitejs/plugin-vue": "^6.0.1",
         "@vue/tsconfig": "^0.8.1",
+        "@webgpu/types": "^0.1.68",
         "typescript": "~5.9.3",
         "vite": "^7.2.4",
         "vue-tsc": "^3.1.4"
