--- a/abs-ai-hub/apps/abs_workstation_console/tsconfig.app.json
+++ b/abs-ai-hub/apps/abs_workstation_console/tsconfig.app.json
@@ -8,6 +8,9 @@
             "DOM",
             "DOM.Iterable"
         ],
+        "types": [
+            "@webgpu/types"
+        ],
         "skipLibCheck": true,
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
