--- a/assets/registry/aliases.yaml
+++ b/assets/registry/aliases.yaml
@@ -21,3 +21,7 @@ aliases:
     ollama: llama4:scout
   llama3:8b:
     ollama: llama3:8b
+  llama3:70b:
+    ollama: llama3:70b
+  deepseek-r1:70b:
+    ollama: deepseek-r1:70b
